--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,7 @@
                             <div class="col-md-6">
                                 <p><strong><i class="fas fa-phone"></i> Phone:</strong> +91 9301382870</p>
                                 <p><strong><i class="fas fa-globe"></i> Resume:</strong>
-                                    <a href="https://aryan-khatri.github.io/resume.github.io/"
+                                    <a href="https://aryan-khatri.github.io/resume/"
                                         target="_blank">www.resume.io</a>
                                 </p>
                             </div>
